# order_matching_engine

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.github/: build.yml
.github/workflows/: build.yml
src/: lib.rs  main.rs  order.rs  trade.rs
src/models/: order_type.rs  side.rs
tests/: order_tests.rs  trade_tests.rs
